# TCE-2026-Desktop

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: point3_test.ts  verify_exam_distribution.cjs
scripts/samples/: gabarito.txt  prova.txt
src/: App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_discursive_answers.sql  004_notebooklm_url.sql  005_seed_questions.sql  006_import_pipeline.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: import.rs  keyring.rs  mod.rs  planner.rs
src/components/: Sidebar.tsx
src/lib/: db.ts  plannerEngine.ts
src/lib/importers/: cebraspePdfParser.ts  genericCsvParser.ts  normalize.ts  topicAutoTagger.ts
src/lib/importers/__tests__/: hash.test.ts  parsers.test.ts
src/pages/: Dashboard.tsx  EditalTree.tsx  ExamDiscovery.tsx  ExamResults.tsx  ExamSession.tsx  Exams.tsx  Notebooks.tsx  Planner.tsx  QuestionBank.tsx  QuestionImport.tsx  Settings.tsx
src/stores/: examStore.ts  notebookStore.ts  plannerStore.ts  questionStore.ts  settingsStore.ts  topicStore.ts
src/styles/: index.css
