[package]
name = "tce-app"
version = "0.1.0"
description = "Estudos TCE-MA 2026 — Auditor TI (Cargo 15)"
authors = ["André"]
edition = "2021"

[lib]
name = "tce_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["linux-native"] }
csv = "1.3"
tokio = { version = "1", features = ["full"] }
